# arbiter

./: .gitignore  README.md  app.py  arbiter_broker.py  arbiter_test.py  main.py  main.tf  new_test_service.py  pyproject.toml  temp_chat_service.py  test_service.py  test_task.py
.github/: pull_request_template.md
arbiter/: __init__.py  arbiter.py  configs.py  constants.py  enums.py  exceptions.py  logger.py  main.py  models.py  parser.py  task_register.py  telemetry.py  utils.py
arbiter/_service/: __init__.py  service.py
arbiter/_task/: __init__.py  task.py
arbiter/abc/: task_register.py
arbiter/api/: .local.sample.env  __init__.py  adapter.py  api_service.py  app.py  broker.py  config.py  constants.py  database.py  dependencies.py  game_tester.py  main.py  models.py  repository.py  socket.py  utils.py  worker.py
arbiter/apm/: __init__.py  telemetry.py
arbiter/app/: __init__.py  app.py
arbiter/broker/: __init__.py  base.py  decorator.py  redis_broker.py  tasks.py
arbiter/brokers/: __init__.py  base.py  nats_broker.py  redis_broker.py
arbiter/cli/: __init__.py  main.py  utils.py
arbiter/command/: main.py  template.py
arbiter/constants/: __init__.py  data.py  enums.py  messages.py  protocols.py
arbiter/core/: interface.py  main.py  utils.py
arbiter/data/: __init__.py  messages.py  models.py
arbiter/database/: __init__.py  model.py  schema.prisma
arbiter/example/: main.py  models.py  repository.py
arbiter/gateway/: __init__.py  app.py  logging.py  service.py
arbiter/interface/: __init__.py  base.py  task.py  tasks.py
arbiter/models/: __init__.py  base.py
arbiter/node/: __init__.py  node.py
arbiter/proxy/: arbiter_proxy.py  uvicorn_proxy.py
arbiter/reference/: adapter.py  service.py
arbiter/registry/: __init__.py  gateway.py  node_catalog.py  registry.py  service_catalog.py  task_catalog.py
arbiter/runner/: __init__.py  arbiter_runner.py  console.py  interface.py  main.py  repl.py  runner.py  utils.py
arbiter/server/: __init__.py  app.py  service.py
arbiter/service/: __init__.py  absctract_service.py  arbiter_service.py  base.py  redis_service.py  service.py
arbiter/task/: __init__.py  process_runner.py  task.py  task_group.py  task_runner.py  tasks.py
arbiter/tests/: conftest.py
arbiter/worker/: __init__.py  worker.py
arbiter_runner/: __init__.py  main.py
arbiter_runner/commands/: build.py
dummy/: __init__.py  arbiter.py  arbiter_runner.py
example/chat-example/: .env.sample  README.md  package.json  tailwind.config.ts
examples/simple_llm/: main.py
examples/simple_store/: main.py  requirements.txt
examples/simple_telemetry/: main.py
infra/: README.md  main.tf  outputs.tf  provider.tf  variables.tf
infra/examples/: README.md
infra/service/: README.md  main.tf  outputs.tf  variables.tf
maenv/: __init__.py
maenv/dusty/: collisions.py  colors.py  controls.py  dataclasses.py  dusty_agent.py  dusty_env.py  dusty_log_manager.py  dusty_map.py  enums.py  exceptions.py  grid_objects.py  logs.py  utils.py
manager/: package-lock.json  package.json
manager/src/: App.css  App.tsx
newbiter/: abstract_sercvice.py  main.py  utils.py
reference/: router.py  service.py
reference/chat/: connection.py  room.py  router.py
reference/chatting/: chat_user.py  chatting_env.py  router.py
reference/game/: router.py
server/: .local.sample.env  adapter.py  config.py  custom_cursor.py  database.py  exceptions.py  gym_adapter.py  main.py  mongodb.py  pagination.py  test_page.py  utils.py
server/auth/: cli.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
server/chat/: connection.py  exceptions.py  lobby_manager.py  models.py  room.py  room_manager.py  (+2 more)
src/: .local.env  .local.sample.env  config.py  database.py  exceptions.py  main.py  utils.py
tests/: _service.py  app.py  arbiter_test.py  conftest.py  service.py  test_app.py  test_exception.py  test_http.py  test_service.py  test_stream.py  test_worker.py
(+183 files in other folders)
