[tool.poetry]
name = "arbiter"
version = "0.0.1.6.3"
description = ""
authors = ["kc-softmax"]
readme = "README.md"

[tool.poetry.scripts]
arbiter = "arbiter.runner.main:app"

[tool.poetry.dependencies]
annotated-types = "^0.7.0"
anyio = "^4.4.0"
certifi = "^2024.6.2"
click = "^8.1.7"
dnspython = "^2.6.1"
ecdsa = "^0.19.0"
email_validator = "^2.2.0"
datamodel_code_generator = "^0.26.0"
fastapi = "^0.110.0"
fastapi-cli = "^0.0.4"
h11 = "^0.14.0"
httpcore = "^1.0.5"
httptools = "^0.6.1"
httpx = "^0.27.0"
idna = "^3.7"
Jinja2 = "^3.1.4"
Mako = "^1.3.5"
markdown-it-py = "^3.0.0"
MarkupSafe = "^2.1.5"
mdurl = "^0.1.2"
orjson = "^3.10.5"
pyasn1 = "^0.6.0"
pydantic = "^2.7.4"
pydantic_core = "^2.18.4"
Pygments = "^2.18.0"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
PyYAML = "^6.0.1"
redis = "^5.0.6"
rich = "^13.7.1"
rsa = "^4.9"
shellingham = "^1.5.4"
six = "^1.16.0"
sniffio = "^1.3.1"
starlette = "^0.37.2"
typer = "^0.12.3"
typing_extensions = "^4.12.2"
ujson = "^5.10.0"
uvicorn = "^0.30.1"
uvloop = "^0.19.0"
watchfiles = "^0.22.0"
websockets = "^12.0"
bcrypt = "^4.1.3"
gunicorn = "^22.0.0"
psutil = "^6.0.0"
python-fasthtml = "^0.4.4"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"